Fix serch box gap. Fixa alignment qty of results

--- a/less/components/consonant/_rtl.less
+++ b/less/components/consonant/_rtl.less
@@ -23,6 +23,8 @@
         }
 
         .consonant-filters-info--results {
+            margin-left: 0;
+            margin-right: auto;
             text-align: right;
         }
     }
@@ -381,6 +383,11 @@
             .consonant-top-filters--filters-wrapper {
                 margin-right: 0;
                 margin-left: 16px;
+            }
+
+            .consonant-top-filters--select-wrapper {
+                margin-left: 0;
+                margin-right: 8px;
             }
 
             .consonant-top-filters--title {
