--- a/less/components/consonant/bookmarks.less
+++ b/less/components/consonant/bookmarks.less
@@ -105,7 +105,6 @@
         margin-top: -1px;
         padding: 14/@consonant-root-rem 0;
         border: 2px solid transparent;
-        order: -1;
 
         &:focus {
             border-color: @consonant-focus-color;
