--- a/less/components/consonant/filters/left/panel.less
+++ b/less/components/consonant/filters/left/panel.less
@@ -233,7 +233,7 @@
 
     .consonant-left-filters--chosen-filters {
         position: relative;
-        margin-top: -1px;
+        margin-top: -16px;
 
         .full-width;
 
@@ -300,6 +300,7 @@
 
         & > button {
             display: flex;
+            margin-top: 10px;
         }
 
         .consonant-left-filters--clear-link {
